2012-02-22  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* chain.music: Give label to eventdelay.

	* eventdelay.cc (EventHandlerLocalIndex): Don't add delay when
	reporting time stamp of received events.

2010-07-28  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.7

2009-10-25  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.6

2009-10-24  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.5

2009-04-01  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* Release 1.0.4

2009-03-14  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* messagesource.cc, messages.music, messages0.dat, messages1.dat:
	New files.

	* Makefile.am (noinst_PROGRAMS): Added messagesource.
	(EXTRA_DIST): Added messages.music.

	* eventlogger.cc: Added support for messages.

2009-03-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.3

2009-03-12  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.2

2009-03-11  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am: Automatically build all test programs (but don't
	install them).
	(EXTRA_DIST): Added cloop.music.

2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.1

2009-03-07  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* events.music: Removed absolute paths from binaries.

2009-03-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am: Don't install waveproducer/waveconsumer example.

2009-03-05  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* constsource.cc (main): Initialize loop variable i.

	* contdelay.cc (getargs): Use atof instead of atoi for option -d.

2009-03-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0

2009-02-19  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventlogger.cc: Log time of event as well as time of reception.

2009-02-10  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* eventlogger.cc: Added options --acclatency and --maxbuffered.

2008-12-02  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Switch to CamelCase.
