@@ -1,3 +1,7 @@
+2012-03-17  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* events.py: New file.
+
 2012-02-22  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* chain.music: Give label to eventdelay.
